include(${VTK_USE_FILE})
simmedtk_add_library(RenderDelegates
  SOURCES
    AABBRenderDelegate.cpp
    MeshRenderDelegate.cpp
    PlaneRenderDelegate.cpp
    SceneObjectDeformableRenderDelegate.cpp
    StaticSceneObjectRenderDelegate.cpp
    SurfaceTreeRenderDelegate.cpp
    InitRenderDelegates.cpp
  PUBLIC_HEADERS
    InitRenderDelegates.h
)

target_link_libraries(RenderDelegates
  PRIVATE
    Core
    Rendering
    Mesh
    Simulators
)
