simmedtk_add_library(Simulators
  SOURCES
    DefaultSimulator.cpp
    ObjectSimulator.cpp
  PUBLIC_HEADERS
    DefaultSimulator.h
    ObjectSimulator.h
)

target_link_libraries(Simulators
  PRIVATE
    Core
    Mesh
    Event
    Collision
    IO
    Devices
    VirtualTools
    Solvers
    TimeIntegrators
    SceneModels
  PUBLIC
    VegaFEM::configFile
    VegaFEM::vega-getopts
    VegaFEM::performanceCounter
    VegaFEM::volumetricMesh
    VegaFEM::stvk
    VegaFEM::integratorSparse
    VegaFEM::massSpringSystem
    VegaFEM::corotationalLinearFEM
    VegaFEM::elasticForceModel
    VegaFEM::isotropicHyperelasticFEM
    VegaFEM::loadList
    VegaFEM::objMesh
    VegaFEM::volumetricMesh
    VegaFEM::forceModel
    )

target_include_directories(Simulators
  PRIVATE
    ${CMAKE_SOURCE_DIR}/include
    )
