
add_subdirectory(smCore)
add_subdirectory(smCollision)
add_subdirectory(smExternal)
add_subdirectory(smExternalDevices)
add_subdirectory(smMesh)
add_subdirectory(smRendering)
add_subdirectory(smShader)
add_subdirectory(smSimulators)
add_subdirectory(smTools)
add_subdirectory(smUtilities)
add_subdirectory(smEvent)
